service-mesh/istioinaction/09_chapter/AuthorizationPolicy/allow-serviceaccount.yaml
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "webapp-allow-serviceaccount"
  namespace: istioinaction
spec:
  selector:
    matchLabels:
      app: catalog
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/istioinaction/sa/webapp"]
      to:
        - operation:
            methods: ["GET"]
