service-mesh/istioinaction/09_chapter/AuthorizationPolicy/deny-all.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: istioinaction
spec: {}
